# Trade-Bot

./: .gitignore  README.md  config.py  plan.txt  pyproject.toml  reports.py  trading_cli.py
backtest/: __init__.py  engine.py  metrics.py
data/: __init__.py  loader.py
docs/: technical-reference.md
features/: __init__.py  indicators.py  labels.py  normalizer.py  pipeline.py  sequences.py
models/: __init__.py  lgbm.py  splits.py  torch_models.py  torch_training.py
notebooks/: 01_data_download.ipynb  02_feature_engineering.ipynb  03_train_models.ipynb  04_backtest.ipynb  05_colab_nifty50_batch.ipynb  05_colab_nifty50_batch_full.ipynb  README.md
scripts/: __init__.py  batch_train.py  csv_discovery.py  train_pooled_lightgbm.py
strategy/: __init__.py  signals.py
tests/: test_backtest.py  test_csv_discovery.py  test_data_loader.py  test_features.py  test_pooled_lightgbm.py  test_sequences.py  test_splits_signals.py
