[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingbot26-lightgbm-mvp"
version = "0.1.0"
description = "LightGBM NSE intraday research MVP following plan.txt"
requires-python = ">=3.11,<3.13"
dependencies = [
  "jugaad-data>=0.26",
  "yfinance>=0.2.60",
  "pandas>=2.2",
  "numpy>=1.26",
  "pyarrow>=15",
  "lightgbm>=4.3",
  "scikit-learn>=1.4",
  "joblib>=1.3",
  "requests>=2.31",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
trading-mvp = "trading_cli:main"

[tool.setuptools]
py-modules = ["config", "reports", "trading_cli"]
packages = ["backtest", "data", "features", "models", "strategy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
